resized figure finished-trouble in spacing and align in lodging-balise img trouble to correct in lodging

--- a/style.css
+++ b/style.css
@@ -32,8 +32,13 @@ h3{
     font-weight: 700;
 }
 
-p{
+h4{
     font-size: 0.9em;
+    font-weight: 700;
+}
+
+p{
+    font-size: 0.8em;
     font-weight: 400;
 }
 
@@ -177,7 +182,136 @@ border-color: #F2F2F2;
 }
 
 /*<!-- LODGING section (lodging inThisTown + top3 lodging)-->*/
+#LODGING{
+    max-width: 1400px;
+    height: 600px;
+    padding-top: 20px;
+    border:solid 1px black ;
+    }
 
+#thisTownLodging, #popLodging{
+    background-color:rgb(184, 182, 182);
+    border:solid 1px rgb(63, 50, 50) ;
+    border-radius: 25px;
+    }
+
+
+    /*figure de gauche (lthisTownLodging)*/
+.thisTownFigure{
+    background-color: white;
+    width: 252px;
+    padding:6px 6px 0 6px;
+    border-radius: 25px;
+    margin-left: 20px;
+    box-shadow: 1px 2px 10px #3f3f3f;
+    }
+      
+.thisTownImage{   /*750x500*/
+    border:dotted 1px rgb(126, 24, 29);
+    width: 250px;
+    height: 130px;
+    object-fit:cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    }
+        
+.thisTownImageText{
+    height: 60px;
+    line-height: 0.2em;
+    padding-left:10px;
+    }
+            
+    .fa-star{
+        color:#0065FC;
+        font-size: 0.8em;
+    }
+    
+    .greystar{
+        color:#F2F2F2;
+    }
+    
+    #thisTownMore{
+        margin-left: 40px;
+    }
+
+    /*figure de droite (popLodging)*/
+            
+    .popLodgingFigure{
+    background-color: white;
+    width: 350px;
+    padding:6px 0px 6px 6px;
+    border-radius: 25px;
+    display: flex;
+    margin-left: 20px;
+    margin-top: 20px;
+    box-shadow: 1px 2px 10px #3f3f3f;
+    }  
+
+    .popLodgingImage{   /*532x355*/
+    border:dotted 1px rgb(126, 24, 29);
+    width: 125px;
+    height: 140px;
+    object-fit:cover;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    }
+
+    .popLodgingText{
+    /*width: 300px;
+    height: 74px;*/
+    line-height: 1.4em;
+    padding: 5px 0 0px 30px;
+    }
+
+    article{
+        background-color:lemonchiffon;
+        padding:0; 
+        border-radius: 20px;
+        border-style: solid;
+        border-color: indigo;
+        flex: 2;
+        margin-right: 40px;
+        }
+        
+        aside{
+        background-color:lemonchiffon;
+        padding:0; 
+        border-radius: 20px;
+        border-style: solid;
+        border-color: indigo;
+        flex: 1;
+        }
+        
+        #thisTownTitle{
+            margin-top: 30px;
+            margin-left: 50px;
+        }
+        #thisTownMore{
+            margin-left: 40px;
+            margin-bottom: 50px;
+        }
+        
+        #popLodging{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+        }
+        
+        #popLodgingTitle{
+            justify-content: space-around;
+            align-items:center;
+            margin-top: 0px;
+            
+        }
+        
+        #popLodgingRanking{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            margin-top: 0px;
+        }
+
+/*debut
 #LODGING{
 max-width: 1400px;
 padding-top: 20px;
@@ -271,7 +405,7 @@ flex: 1;
 #popLodging figcaption{
 flex: 2;
 }
-
+fin*/
 
 /*<!----- ACTIVITY section (activity inThisTown)----->*/
 
